MAT-8013 Replacing the usage of SVS api for valueset search in QI Core measure test cases page